[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/EnemyStraightPongBullets.gd" type="Script" id=1]
[ext_resource path="res://Textures/enemy/shmup_spaceship.png" type="Texture" id=2]
[ext_resource path="res://scripts/Sprite.gd" type="Script" id=3]
[ext_resource path="res://sfx/Explosions/SplodeSmall.wav" type="AudioStream" id=4]
[ext_resource path="res://sfx/Impacts/Damage.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0

[node name="ESPB" type="Area2D" groups=[
"Enemy",
]]
collision_layer = 2
script = ExtResource( 1 )
timer = 0.1
burstTime = 4.0
breakTime = 1.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="enemy1" type="Sprite" parent="."]
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )
flip_h = true
hframes = 4
script = ExtResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0

[node name="damage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0
[connection signal="area_entered" from="." to="." method="_on_ESPB_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_ESPB_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
